# UdriveTPTaller2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  holaMundo.cpp
servidor/: CMakeLists.txt  CMakeLists.txt~  holaMundorRDB.cpp  holaMundorRDB.cpp~  main.cpp  servidor.txt
servidor/clases/: BaseDeDatos.cpp  BaseDeDatos.h  Controller.cpp  Controller.h  DatosDeArchivos.cpp  DatosDeArchivos.h  DatosDeUsuario.cpp  DatosDeUsuario.h  DatosEtiquetas.cpp  DatosEtiquetas.h  FilesController.cpp  FilesController.h  ManejadorDB.cpp  ManejadorDB.h  MetadatosConsulta.cpp  MetadatosConsulta.h  MyController.cpp  MyController.h  RequestHandler.h  Server.cpp  Server.h  UsersController.cpp  UsersController.cpp~  UsersController.h  UsersController.h~  estructuras.h
servidor/clases/cabeceras/: AdministradorServidor.h  Archivo.h  BaseDeDatos.h  Buscador.h  ControladorActualizacion.h  Excepciones.h  Fecha.h  Hash.h  Log.h  ManejadorArchivos.h  ManejadorArchivosFisicos.h  ManejadorBuscador.h  ManejadorUsuario.h  Respuesta.h  Restaurador.h  Usuario.h
servidor/clases/codigoFuente/: AdministradorServidor.cpp  Archivo.cpp  Buscador.cpp  ControladorActualizacion.cpp  Fecha.cpp  Hash.cpp  Log.cpp  Log.cpp~  ManejadorArchivos.cpp  ManejadorArchivosFisicos.cpp  ManejadorBuscador.cpp  Servidor.cpp  Usuario.cpp
servidor/clasesCP2/: Actualizador.cpp  Actualizador.h  AdministradorServidor.cpp  AdministradorServidor.cpp~  AdministradorServidor.h  Archivo.cpp  Archivo.h  BaseDeDatos.cpp  BaseDeDatos.cpp~  BaseDeDatos.h  Buscador.cpp  Buscador.h  Constantes.h  ControladorActualizacion.cpp  Directorio.cpp  Directorio.h  Excepciones.cpp  Excepciones.h  Hash.cpp  Hash.h  Log.cpp  ManejadorArchivos.cpp  ManejadorArchivos.h  ManejadorArchivosFisicos.cpp  ManejadorArchivosFisicos.h  ManejadorBuscador.cpp  ManejadorBuscador.h  ManejadorUsuario.cpp  ManejadorUsuario.h  Respuesta.cpp  Respuesta.h  Restaurador.cpp  Restaurador.h  Servidor.cpp  Servidor.cpp~  Servidor.h  Usuario.cpp  Usuario.h
servidor/clasesCP2/cabeceras/: Actualizador.h  AdministradorServidor.h  Archivo.h  Buscador.h~  ControladorActualizacion.h  Fecha.h  Log.h  ManejadorArchivos.h  ManejadorUsuario.h  Restaurador.h  Servidor.h  Usuario.h
servidor/clasesCP2/codigoFuente/: Actualizador.cpp~  AdministradorServidor.cpp~  Archivo.cpp~  BaseDeDatos.cpp  BaseDeDatos.cpp~  Buscador.cpp  Buscador.cpp~  ControladorActualizacion.cpp  Fecha.cpp~  Hash.cpp~  Log.cpp  ManejadorUsuario.cpp  ManejadorUsuario.cpp~  Respuesta.cpp  Restaurador.cpp  Usuario.cpp  Usuario.cpp~
servidor/jsonPrueba/: archivo.json  archivoEliminado.json  datosDeUsuario.json  datosDeUsuarioActualizado.json
servidor/tests/: CMakeLists.txt  CMakeLists.txt~  mainTest.cpp  testsServidor.py  testsServidor.py~
servidor/tests/cov/: index-sort-f.html  index-sort-l.html  index.html
servidor/tests/cov/clases/: BaseDeDatos.cpp.func-sort-c.html  BaseDeDatos.cpp.func.html  BaseDeDatos.cpp.gcov.html  Controller.cpp.func-sort-c.html  Controller.cpp.func.html  Controller.cpp.gcov.html  DatosDeArchivos.cpp.func-sort-c.html  DatosDeArchivos.cpp.func.html  DatosDeArchivos.cpp.gcov.html  DatosDeUsuario.cpp.func-sort-c.html  DatosDeUsuario.cpp.func.html  DatosDeUsuario.cpp.gcov.html  FilesController.cpp.func-sort-c.html  FilesController.cpp.func.html  FilesController.cpp.gcov.html  JsonController.cpp.func-sort-c.html  JsonController.cpp.func.html  JsonController.cpp.gcov.html  JsonController.h.func-sort-c.html  JsonController.h.func.html  JsonController.h.gcov.html  JsonResponse.cpp.func-sort-c.html  JsonResponse.cpp.func.html  JsonResponse.cpp.gcov.html  JsonResponse.h.func-sort-c.html  JsonResponse.h.func.html  JsonResponse.h.gcov.html  ManejadorDB.cpp.func-sort-c.html  ManejadorDB.cpp.func.html  ManejadorDB.cpp.gcov.html  MetadatosConsulta.cpp.func-sort-c.html  MetadatosConsulta.cpp.func.html  MetadatosConsulta.cpp.gcov.html  Mutex.cpp.func-sort-c.html  Mutex.cpp.func.html  Mutex.cpp.gcov.html  MyController.cpp.func-sort-c.html  MyController.cpp.func.html  MyController.cpp.gcov.html  Request.cpp.func-sort-c.html  (+62 more)
servidor/tests/cov/clasesCP2/: Actualizador.cpp.func-sort-c.html  Actualizador.cpp.func.html  Actualizador.cpp.gcov.html  AdministradorServidor.cpp.func-sort-c.html  AdministradorServidor.cpp.func.html  AdministradorServidor.cpp.gcov.html  Archivo.cpp.func-sort-c.html  Archivo.cpp.func.html  Archivo.cpp.gcov.html  BaseDeDatos.cpp.func-sort-c.html  BaseDeDatos.cpp.func.html  BaseDeDatos.cpp.gcov.html  Fecha.cpp.func.html  (+47 more)
(+1036 files in other folders)
